# simi_search

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: release-conda.yml  release-docker.yml  release-pypi.yml  test-and-lint.yml
conda-recipe/: meta.yaml
docs/: api.rst  conf.py  index.rst  methods.rst  release.rst  usage.rst
docs/_static/: scientific.css
simi_search/: __init__.py  benchmark.py  fingerprints.py  metrics.py  models.py  search.py
simi_search/datasets/: lit_pcba.py
simi_search/scripts/: benchmark_similarity.py  download_lit_pcba.py
tests/: test_lit_pcba.py  test_metrics.py  test_similarity.py
